fixed spacing and margins

--- a/src/header.scss
+++ b/src/header.scss
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  width: 100%;
+  width: 100vw;
   display: flex;
   margin: 0;
   background-color: $primary-mustard;
