--- a/src/mainpage.scss
+++ b/src/mainpage.scss
@@ -5,19 +5,21 @@
   align-items: center;
   background-color: #fff0c9;
   font-family: 'Poppins', sans-serif;
+  width: 100vw;
 
   .current-matches {
+    width: 100vw;
     align-self: flex-start;
-    padding-left: 2rem;
+    // padding-left: 2rem;
     background-color: $primary-black;
     color: $primary-mustard;
-    width: 100%;
     box-shadow: 0px 0.5px 5px $primary-black;
   }
 
   .current-matches h3 {
     margin: 0.5rem 0;
     padding-top: 0.3rem;
+    padding-left: 2rem;
     font-family: 'Arvo', serif;
     text-decoration: underline;
   }
